RESOLVED FIXED 252549
AX: WebKit does not report some inputs as invalid despite being rendered as such
https://bugs.webkit.org/show_bug.cgi?id=252549
Summary AX: WebKit does not report some inputs as invalid despite being rendered as such
Tyler Wilcock
Reported 2023-02-19 14:22:09 PST
WebKit does not report these inputs as invalid despite them being visually rendered as such: <label for="lowercase">Only use lowercase here</label> <input id="pattern-input" name="lowercase" type="text" value="FOO" pattern="[a-z]+"> <label for="age">Age: (50+ only)</label> <input id="number-input" name="age" type="number" value="2" min="50">
Attachments
Patch (9.68 KB, patch)
2023-02-19 14:30 PST, Tyler Wilcock
no flags
Patch (10.39 KB, patch)
2023-02-19 17:34 PST, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2023-02-19 14:22:21 PST
Tyler Wilcock
Comment 2 2023-02-19 14:30:43 PST
Tyler Wilcock
Comment 3 2023-02-19 17:34:18 PST
EWS
Comment 4 2023-02-20 09:49:03 PST
Committed 260544@main (8f41d99df20c): <https://commits.webkit.org/260544@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 465081 [details].
Note You need to log in before you can comment on or make changes to this bug.