AX: WebKit does not report some inputs as invalid despite being rendered as such https://bugs.webkit.org/show_bug.cgi?id=252549 rdar://problem/105653691

Reviewed by Chris Fleizach.

Currently, WebKit only reports native input elements as invalid if:

  - `HTMLInputElement::hasBadInput()`
  - `HTMLInputElement::typeMismatch()`

However, there are several other reasons an input can be invalid (for
example, `HTMLInputElement::patternMismatch()`).

This patch fixes this by using `ValidatedFormListedElement::isValidFormControlElement()`,
which inherently considers all possible ways an input can be valid / invalid.

This patch also features another improvement. Now, when an input changes from valid to
invalid or vice versa, WebKit sends a notification. This makes it known to AT users when
they enter input that causes the field to go invalid. Previously, AT users would have to
leave and re-enter the field to know it had become invalid.

* LayoutTests/platform/gtk/inspector/dom/getAccessibilityPropertiesForNode-expected.txt:
Add new invalid expectation.
* LayoutTests/accessibility/invalid-inputs-expected.txt: Added.
* LayoutTests/accessibility/invalid-inputs.html: Added.
* LayoutTests/platform/ios/TestExpectations:
Enable new test.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::onValidityChange): Added.
* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::onValidityChange):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::invalidStatus const):
* Source/WebCore/html/ValidatedFormListedElement.cpp:
(WebCore::ValidatedFormListedElement::updateValidity):

Canonical link: https://commits.webkit.org/260544@main