Source/WebCore/accessibility/AXObjectCache.h
@@ -179,6 +179,7 @@ public:
     void childrenChanged(AccessibilityObject*);
     void onSelectedChanged(Node*);
     void onTitleChange(Document&);
+    void onValidityChange(Element&);
     void valueChanged(Element*);
     void checkedStateChanged(Node*);
     void autofillTypeChanged(Node*);
@@ -668,6 +669,7 @@ inline void AXObjectCache::childrenChanged(RenderObject*, RenderObject*) { }
 inline void AXObjectCache::childrenChanged(AccessibilityObject*) { }
 inline void AXObjectCache::onSelectedChanged(Node*) { }
 inline void AXObjectCache::onTitleChange(Document&) { }
+inline void AXObjectCache::onValidityChange(Element&) { }
 inline void AXObjectCache::valueChanged(Element*) { }
 inline void AXObjectCache::deferFocusedUIElementChangeIfNeeded(Node*, Node*) { }
 inline void AXObjectCache::deferRecomputeIsIgnoredIfNeeded(Element*) { }
